swagger use attributes instead Annotations
