# app/Http/Requests/UpdateTaskRequest.php
@@ -5,17 +5,18 @@ namespace App\Http\Requests;
 use Illuminate\Contracts\Validation\Validator;
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Http\Exceptions\HttpResponseException;
-use OpenApi\Annotations as OA;
+use OpenApi\Attributes as OA;
 
-/**
- * @OA\Schema(
- *     @OA\Xml(name="UpdateTask"),
- *     @OA\Property(property="title", type="string",  example="Example task title"),
- *     @OA\Property(property="description", type="text",  example="Example task description", nullable=true),
- *     @OA\Property(property="due_date", type="string", format="date", example="2025-02-25"),
- *     @OA\Property(property="completed", type="boolean", example=true),
- * )
- */
+#[OA\Schema(
+    required: ['title', 'completed'],
+    properties: [
+        new OA\Property(property: 'title', type: 'string', example: 'Example task title'),
+        new OA\Property(property: 'description', type: 'string', example: 'Example task title', nullable: true),
+        new OA\Property(property: 'due_date', type: 'string', format: 'date', example: '2025-02-25', nullable: true),
+        new OA\Property(property: 'completed', type: 'boolean', example: true, nullable: false),
+    ],
+    xml: new OA\Xml(name: "StoreTask")
+)]
 class UpdateTaskRequest extends FormRequest
 {
     /**
