# app/Http/Resources/TaskResourceForCollection.php
@@ -2,23 +2,22 @@
 
 namespace App\Http\Resources;
 
-use App\Models\Task;
 use Illuminate\Contracts\Support\Arrayable;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
-use OpenApi\Annotations as OA;
-use Spatie\Activitylog\Models\Activity;
+use OpenApi\Attributes as OA;
 
-/**
- * @OA\Schema(
- *     @OA\Xml(name="TaskResourceForCollection"),
- *     @OA\Property(property="id", type="integer", readOnly="true", example="1"),
- *     @OA\Property(property="title", type="string",  example="Example task title"),
- *     @OA\Property(property="due_date", type="string", format="date", example="2019-02-25"),
- *     @OA\Property(property="completed", type="boolean", example=false),
- *     @OA\Property(property="activities", type="int", example=9),
- * )
- */
+#[OA\Schema(
+    required: ['id', 'title', 'completed'],
+    properties: [
+        new OA\Property(property: 'id', type: 'integer', readOnly: true, example: 1),
+        new OA\Property(property: 'title', type: 'string', example: 'Example task title'),
+        new OA\Property(property: 'description', type: 'string', example: 'Example task title', nullable: true),
+        new OA\Property(property: 'due_date', type: 'string', format: 'date', example: '2025-02-25', nullable: true),
+        new OA\Property(property: 'completed', type: 'boolean', example: true, nullable: false),
+    ],
+    xml: new OA\Xml(name: "TaskResourceForCollection")
+)]
 class TaskResourceForCollection extends JsonResource
 {
     /**
